syntax = "proto3";

package task;

service TaskService {
  rpc Create (CreateTaskRequest) returns (TaskResponse);
  rpc FindAll (Empty) returns (TaskListResponse);
  rpc FindOne (FindOneTaskRequest) returns (TaskResponse);
  rpc DeleteOne (FindOneTaskRequest) returns (TaskResponse);
  rpc Update (UpdateOneTaskRequest) returns (TaskResponse);
}

message CreateTaskRequest {
  string title = 2;
  string description = 3;
}

message FindOneTaskRequest {
  string id = 1;
}

message TaskResponse {
  string id = 1;
  string title = 2;
  string description = 3;
  string createdAt = 5;
  string updatedAt = 6;
  string parentId = 7;
}

message TaskListResponse {
  repeated TaskResponse tasks = 1;
}

message Empty {}


message UpdateOneTaskRequest{
  string id = 1;
  string parentId = 5;
  string title = 2;
  string description = 3;
  string status = 4;
}
